[package]
name = "r2-s3"
version = "0.1.4"
edition = "2024"
rust-version = "1.87"
description = "a simple cloudflare r2 or asw s3 storage client wrapper"
license = "MIT OR Apache-2.0"
authors = ["datewu <github>"]

[dependencies]
aws-config = { version= "1.6", features = ["behavior-version-latest"]}
aws-sdk-s3 = {version = "1"}
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros" ]}
